# cpp-handtrack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ContourAnalyzer.hpp  MLClassifier.hpp  MediaPipeDetector.hpp  SkinSegmenter.hpp  Utils.hpp
src/: ContourAnalyzer.cpp  SkinSegmentation.cpp  main.cpp
